--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node server",
+    "dev": "nodemon server",
+    "watch": "webpack --watch"
   },
   "author": "Yurii Hnatiuk <wejderd1@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
@@ -17,8 +19,24 @@
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
     "ejs": "^3.1.6",
+    "ejs-compiled-loader": "^3.1.0",
+    "ejs-html-loader": "^4.0.1",
+    "ejs-loader": "^0.5.0",
+    "ejs-webpack-loader": "^2.2.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "nodemon": "^2.0.7",
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-middleware": "^5.0.0"
   }
 }
